--- a/tests/test_data/cropA/pyrate_mexico_cropa.conf
+++ b/tests/test_data/cropA/pyrate_mexico_cropa.conf
@@ -134,6 +134,7 @@ orbfitlksy:    1
 # subtract_median: whether to subtract median during closure checks
 # max_loops_in_ifg: loops with more than these many ifgs are discarded.
 # max_loops_in_ifg: Ifg count must be met for all ifgs in the loop for loop to be discarded
+# corr_phs: whether to attempt a phase closure correction of multiple of 2*pi to sum closure values
 large_dev_thr: 0.5
 avg_ifg_err_thr: 0.07
 loops_thr_ifg: 2
@@ -141,6 +142,7 @@ phs_unw_err_thr: 5
 max_loop_length: 4
 subtract_median: 1
 max_loops_in_ifg: 2
+corr_phs: 1
 
 
 #------------------------------------
